--- a/src/index.css
+++ b/src/index.css
@@ -12,71 +12,32 @@ body {
   background: #f0f0f0 !important;
 }
 
-*{
-  font-size:14px;
-  box-sizing:border-box;
-}
-
-@media screen and (max-width: 1000px) {
-  *{
-    font-size:12px;
-  }
-}
-
-html{
-  width:100%;
-  height:100%
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-#root {
-  width:100%;
-  height:100%
-}
-
-::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  font-size:0.8rem;
-}
-::-moz-placeholder { /* Firefox 19+ */
-  font-size:0.8rem;
-}
-:-ms-input-placeholder { /* IE 10+ */
-  font-size:0.8rem;
-}
-:-moz-placeholder { /* Firefox 18- */
-  font-size:0.8rem;
-}
-
-.mr-text-green {
+.hm-text-green {
   color:#0CC1A8 !important;
 }
 
-.mr-bg-green{
+.hm-bg-green{
   background-color:#0CC1A8 !important;
 }
 
-.mr-bg-dark {
+.hm-bg-dark {
   background-color: #001C36 !important;
 }
-.mr-bg-darkblue {
+.hm-bg-darkblue {
   background-color:#2d3e4e !important;
 }
-.mr-bg-lessdeepblue {
+.hm-bg-lessdeepblue {
   background-color:#2a3948 !important;
 
 }
-.mr-bg-deepblue {
+.hm-bg-deepblue {
   background-color:#263441 !important;
 }
-.mr-bg-navyblue{
+.hm-bg-navyblue{
   background-color:#5b7cfd !important;
 }
 
-.mr-text-dark {
+.hm-text-dark {
   color:#001C36 !important;
 }
 
@@ -111,29 +72,7 @@ code {
   }
 }
 
-a.no-underline:hover,a.no-underline:focus {
-  text-decoration: none;
-}
-
-button.no-underline:hover,button.no-underline:focus{
-  text-decoration: none;
-}
-
-h1,h2,h3,h4,h5,h6,h7 {
-  margin-bottom:0 !important;
-}
-
-button{
-  border:0;
-  background-color:#fff
-}
-
-.table > tbody > tr > td {
-  /* vertical-align: middle !important; */
-  cursor: pointer;
-}
-
-.mr-button-purple{
+.hm-button-purple{
   border: 1px solid #9f7fd8;
 }
 
@@ -141,15 +80,11 @@ button{
   background-color: #5b7cfd !important;
 }
 
-.chartjs-render-monitor-change{
-  height: 50vh !important;
-  max-width: 778px;
-}
-.mr-purple-text{
+.hm-purple-text{
   color: #9f7fd8 !important;
 }
 
-.mr-break-word{
+.hm-break-word{
   word-break: break-all;
 }
 
@@ -157,25 +92,25 @@ button{
   color: #37b300;
 }
 
-.mr-pointer-cursor{
+.hm-pointer-cursor{
   cursor: pointer;
 }
 
-.mr-pointer-hover:hover{
+.hm-pointer-hover:hover{
   color:#007bff !important;
 }
 
-.mr-text-ellipsis{
+.hm-text-ellipsis{
   white-space: nowrap; 
   overflow: hidden;
   text-overflow:ellipsis
 }
 
-.mr-h-lg{
+.hm-h-lg{
   height:31.5px !important;
 }
 
-.mr-h-xl{
+.hm-h-xl{
   height:40.5px;
 }
 
