--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,33 @@ body {
   background: #f0f0f0 !important;
 }
 
+*{
+  font-size:14px;
+  box-sizing:border-box;
+}
+
+@media screen and (max-width: 1000px) {
+  *{
+    font-size:12px;
+  }
+}
+
+html{
+  width:100%;
+  height:100%
+}
+
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
+}
+
+#root {
+  width:100%;
+  height:100%
+}
+
+
 h1,h2,h3,h4,h5,h6,h7 {
   margin-bottom:0 !important;
 }
