--- a/src/components/main/Main.component.css
+++ b/src/components/main/Main.component.css
@@ -1,23 +1,7 @@
-
-.main-container-open{
-  margin-left: 240px !important;
-  width: calc(100% - 240px) !important;
-
-}
-.main-container-close{
-  margin-left: 240px !important;
-  width: calc(100% - 240px) !important;
-}
-
-@media only screen and (max-width: 992px) {
-
-  .main-container-open{
-    margin-left: 64px !important;
-    width: calc(100% - 64px) !important;
+@media screen and (min-width: 992px) {
+  .main-container-open {
+    padding-left:250px !important
   }
-  .main-container-close{
-    margin-left: 64px !important;
-    width: calc(100% - 64px) !important;
-
+  .main-container-close {
   }
 }
