--- a/src/components/main/Main.component.css
+++ b/src/components/main/Main.component.css
@@ -1,7 +1,63 @@
-@media screen and (min-width: 992px) {
-  .main-container-open {
-    padding-left:250px !important
-  }
-  .main-container-close {
-  }
+
+
+
+/* Position and sizing of burger button */
+
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background-color:#2d3e4e !important;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  margin-top: 10px;
+  margin-right: 10px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  top: 0;
+  height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background-color:#2d3e4e !important;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0) !important;
 }
