--- a/src/containers/dashboard/dashboard.container/dashboard.component/display.card.css
+++ b/src/containers/dashboard/dashboard.container/dashboard.component/display.card.css
@@ -19,3 +19,15 @@
   }
   
 }
+.card-icon-background{
+  width: 48px;
+  height: 48px;
+  background: linear-gradient(to right, #f5385a, #f55d38);
+}
+.card-img{
+  width: 18px; 
+  height: 17px;   
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center; 
+}
