--- a/src/components/main/Main.component.css
+++ b/src/components/main/Main.component.css
@@ -58,7 +58,7 @@ Note: Beware of modifying this element as it can break the animations - you shou
 
 /* Styling of overlay */
 .bm-overlay {
-  background: rgba(0, 0, 0, 0) !important;
+  background: rgba(0, 0, 0, 0.3);
 }
 .fixing-leftMargin-whenOpened{
   width: calc(100% - 250px) !important;
@@ -87,13 +87,4 @@ Note: Beware of modifying this element as it can break the animations - you shou
   border-right: 12px solid transparent;
   border-bottom: 12px solid #fff;
   clear: both;
-}
-
-
-#page-wrap{
-  transform: translate3d(250px, 0px, 0px) !important;
-}
-
-#page-wrap-none{
-  transform: translate3d(0px, 0px, 0px) !important;
 }
