--- a/src/index.css
+++ b/src/index.css
@@ -144,7 +144,9 @@ h1,h2,h3,h4,h5,h6,h7 {
 .hm-h-xl{
   height:40.5px;
 }
-
+.hm-text-12{
+  font-size: 12px;
+}
 .hm-header-size{
   font-size: 15px;
 }
