--- a/src/alertify.css
+++ b/src/alertify.css
@@ -869,7 +869,7 @@
   color:white
 }
 .alertify-notifier .ajs-message.ajs-success {
-  background: rgba(91, 189, 114, 0.95);
+  background: #0CC1A8;
 }
 .alertify-notifier .ajs-message.ajs-error {
   background: rgba(217, 92, 92, 0.95);
