--- a/src/index.css
+++ b/src/index.css
@@ -147,6 +147,9 @@ h1,h2,h3,h4,h5,h6,h7 {
 .hm-text-12{
   font-size: 12px;
 }
+.hm-text-14{
+  font-size: 14px !important;
+}
 .hm-header-size{
   font-size: 15px;
 }
@@ -158,4 +161,10 @@ h1,h2,h3,h4,h5,h6,h7 {
 }
 .text-secondary-color{
   color: #8898aa !important;
+}
+.text-grey{
+  color: #979797;
+}
+.text-black{
+  color: #000
 }
