--- a/src/containers/login/Login.container.css
+++ b/src/containers/login/Login.container.css
@@ -5,15 +5,16 @@
 }
 
 .login-content {
-  min-width: 320px;
+  min-width: 330px;
   max-width: 440px;
-  height: 300px;
+  height: 352px;
   position: absolute;
   margin: auto;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  background-color: #f7fafc ;
 }
 
 .login-image{
@@ -27,20 +28,15 @@
   background: center no-repeat;
   background-size:cover;
 
-
 }
-.login-image-init{
-  background-image:url('/img/king_bg.jpg');
-  /* filter:blur(5px); */
+.login-image-bg{
+  background-image: linear-gradient(#41d0f0, #0d5dc3);
+  clip-path: polygon(0 0, 100% 0, 100% 45%, 0 50%);
 }
 
-.login-image-loaded{
-  background-image:url('/img/king_bg.jpg');
-  -webkit-animation: fadein 2s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 2s; /* Firefox < 16 */
-   -ms-animation: fadein 2s; /* Internet Explorer */
-    -o-animation: fadein 2s; /* Opera < 12.1 */
-       animation: fadein 2s;
+.login-image-bg-2{
+
+background-color: #172b4c
 }
 
 @keyframes fadein {
