--- a/src/index.css
+++ b/src/index.css
@@ -221,3 +221,13 @@ h1,h2,h3,h4,h5,h6,h7 {
 .rounded-custom{
 border-radius: 6px;
 }
+.ajs-header{
+  border-bottom: 1px solid rgba(151, 151, 151, 0.15);
+  color: #32325d;
+  font-size: 17px;
+  font-weight: bold;
+}
+.ajs-content{
+  padding-left: 0% !important;
+  color: #32325d;
+}
