--- a/src/index.css
+++ b/src/index.css
@@ -138,6 +138,10 @@ h1,h2,h3,h4,h5,h6,h7 {
 .hm-text-14{
   font-size: 14px !important;
 }
+
+.hm-text-16{
+  font-size: 16px !important;
+}
 .hm-header-size{
   font-size: 15px;
 }
