--- a/src/index.css
+++ b/src/index.css
@@ -238,3 +238,15 @@ border-radius: 6px;
 .items-height{
   height: 80px;
 }
+
+.company-detail-button{
+  border:1px solid #fb6240; 
+  height:25px;
+ width: 25px
+}
+
+.company-detail-button-sub{
+ border:1px solid #5e72e4; 
+ height:25px;
+width: 25px
+}
