--- a/src/index.css
+++ b/src/index.css
@@ -69,26 +69,6 @@ h1,h2,h3,h4,h5,h6,h7 {
   color:#001C36 !important;
 }
 
-.avatar-icon {
-  width: 45px;
-  height: 45px;
-}
-
-.avatar-icon-lg {
-  width: 80px;
-  height: 80px;
-}
-
-.avatar-icon-sm {
-  width: 25px;
-  height: 25px;
-}
-
-.avatar-icon-xs {
-  width:20px;
-  height:20px;
-}
-
 .text-position{
   text-align: left;
 }
@@ -266,4 +246,8 @@ width: 25px
 }
 .font-weight-500{
   font-weight: 500 !important;
+}
+.avatar{
+  height: 36px;
+  width: 36px;
 }
