--- a/src/index.css
+++ b/src/index.css
@@ -236,6 +236,7 @@ width: 25px
     border:1px solid #5e72e4; 
     height:28px;
    width: 100px;
+   background-color: white;
    color:#5e72e4; 
    border-radius: 5px;
 }
